--- a/d02/ex01/Makefile
+++ b/d02/ex01/Makefile
@@ -1,5 +1,5 @@
 SRC       = main.cpp  Fixed.cpp
-CPPFLAGS  = -Wall  -Wextra  -Werror  -std=c++98
+CPPFLAGS  = -Wall  -Wextra  -Werror  -std=c++98 -g3
 NAME      = EX01
 OBJS      = $(SRC:.cpp=.o)
 CC        = c++
