--- a/d03/ex01/Makefile
+++ b/d03/ex01/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: mberrouk <mberrouk@student.1337.ma>        +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2023/11/27 22:01:34 by mberrouk          #+#    #+#              #
+#    Updated: 2023/11/27 22:59:31 by mberrouk         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 SRC       = main.cpp ClapTrap.cpp ScavTrap.cpp
 CPPFLAGS  = -Wall  -Wextra  -Werror  -std=c++98
 NAME      = ScavTrap
@@ -9,8 +21,8 @@ all       : $(NAME)
 $(NAME)   : $(OBJS)
 	$(CC)  $(CPPFLAGS)  $(OBJS)  -o $(NAME)
 
-%.o       : %.cpp
-	$(CC)  $(CPPFLAGS)  -c  $^  -o  $@
+%.o       : %.cpp %.hpp
+	$(CC)  $(CPPFLAGS)  -c  $<  -o  $@
 
 clean     :
 	rm  -f  *.o
