--- a/d05/ex00/Makefile
+++ b/d05/ex00/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: mberrouk <mberrouk@student.1337.ma>        +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2023/12/27 16:22:12 by mberrouk          #+#    #+#              #
+#    Updated: 2023/12/27 16:27:51 by mberrouk         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 SRC       = main.cpp Bureaucrat.cpp
 INCLUDES  = Bureaucrat.hpp
 CPPFLAGS  = -Wall -Wextra -Werror -std=c++98
