--- a/d07/ex00/Makefile
+++ b/d07/ex00/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: mberrouk <mberrouk@student.1337.ma>        +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/01/03 19:45:14 by mberrouk          #+#    #+#              #
+#    Updated: 2024/01/03 19:45:15 by mberrouk         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 SRC       = main.cpp
 INCLUDES  = whatever.hpp
 CPPFLAGS  = -Wall -Wextra -Werror -std=c++98
