--- a/d09/ex00/Makefile
+++ b/d09/ex00/Makefile
@@ -14,6 +14,7 @@ SRC       = main.cpp BitcoinExchange.cpp
 INCLUDES  = BitcoinExchange.hpp
 CPPFLAGS  = -Wall -Wextra -Werror -std=c++98
 NAME      = btc
+TEST      = btcTEST
 OBJS      = $(SRC:.cpp=.o)
 CC        = c++
 
@@ -25,8 +26,14 @@ $(NAME)   : $(INCLUDES) $(OBJS)
 %.o       : %.cpp
 	$(CC) $(CPPFLAGS) -c $^ -o $@
 
+test      : $(TEST) tests/test.cpp BitcoinExchange.cpp
+
+$(TEST)   : $(INCLUDES) 
+	$(CC)  $(CPPFLAGS) tests/test.cpp BitcoinExchange.cpp -o $(TEST)
+
 clean     :
 	$(RM) *.o
+	$(RM) $(TEST)
 
 fclean    : clean
 	$(RM) $(NAME)
